--- a/Shopper/src/main/resources/application.properties
+++ b/Shopper/src/main/resources/application.properties
@@ -15,4 +15,8 @@ jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+
+
 server.port=9000
